--- a/lib/ping_river_levels_web/components/layouts/root.html.heex
+++ b/lib/ping_river_levels_web/components/layouts/root.html.heex
@@ -10,6 +10,13 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+    <script
+      defer
+      data-domain="pingriverlevels.raulrpearson.com"
+      data-api="https://clean-bobcat-65.deno.dev/pa"
+      src="https://clean-bobcat-65.deno.dev/utils"
+    >
+    </script>
   </head>
   <body class="bg-white">
     <%= @inner_content %>
