Add P.1 and P.67 location info

--- a/lib/ping_river_levels_web/controllers/page_html/about.html.heex
+++ b/lib/ping_river_levels_web/controllers/page_html/about.html.heex
@@ -28,6 +28,23 @@
     Facebook group was a great resource, helping me navigate what was happening. Through that group I found out about the Thai's official <a href="https://hydro-1.net/Data/HD-04/houly/hourly_level.php">depth and discharge data</a>, updated hourly. This is already a very helpful resource, but I thought it'd be fun to try to display that data as a chart.
   </p>
   <p>
+    Right now, this site only gathers data from station <a
+      href="https://www.google.com/maps/search/?api=1&query=18.786925%2C99.004725"
+      class="text-amber-600 underline hover:brightness-110"
+    >
+      P.1</a>, located next to Nawarat Bridge, and station <a
+      href="https://www.google.com/maps/search/?api=1&query=19.009852%2C98.959739"
+      class="text-amber-600 underline hover:brightness-110"
+    >
+      P.67</a>, which is further upstream. The Royal Irrigation Department provides a map with the <a href="https://goo.gl/maps/rUc6oBVYhmVcsv358">location of all their stations</a>.
+  </p>
+  <a href={~p"/images/stations-map.webp"}>
+    <img
+      src={~p"/images/stations-map.webp"}
+      alt="Map displaying the location of stations P.1 and P.67"
+    />
+  </a>
+  <p>
     I built this site as a fun learning project. Please keep in mind that the information presented here is provided "as is", without warranty of any kind. There could be bugs that produce inaccurate information, so always check the official data sources if you need stronger assurance.
   </p>
   <p>
