--- a/lib/ping_river_levels_web/controllers/page_html/home.html.heex
+++ b/lib/ping_river_levels_web/controllers/page_html/home.html.heex
@@ -1,7 +1,21 @@
 <.flash_group flash={@flash} />
-<div class="space-y-5">
-  <p class="text-center text-sm">
-    Data sourced from <a
+<div class="space-y-8">
+  <p class="text-center text-sm max-w-prose mx-auto">
+    Station
+    <a
+      href="https://www.google.com/maps/search/?api=1&query=18.786925%2C99.004725"
+      class="text-amber-600 underline hover:brightness-110"
+    >
+      P.1</a>
+    is located next to Nawarat Bridge and
+    <a
+      href="https://www.google.com/maps/search/?api=1&query=19.009852%2C98.959739"
+      class="text-amber-600 underline hover:brightness-110"
+    >
+      P.67</a>
+    is further upstream. A map is provided in the
+    <a href="/about" class="text-amber-600 underline hover:brightness-110">about</a>
+    page. Data sourced from <a
       href="https://hydro-1.net/Data/HD-04/houly/hourly_level.php"
       class="text-amber-600 underline hover:brightness-110"
     >hydro-1.net</a>.
